Tue Jul  9 11:10:38 2002  Steve Huston  <shuston@riverace.com>

        * apps/Gateway/Peer/Peer.{h cpp}: Renamed Peer_Acceptor::open()
          to Peer_Acceptor::start() to avoid clashes with virtual
          ACE_Acceptor::open.

Tue Jul  9 09:01:14 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/taolib_with_idl.mpb:

          Change the default tao_idl option from -Gs to -Sc.

Tue Jul  9 08:07:20 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/TemplateParser.pm:

          When using Cygwin Perl, we need to convert the cwd to a windows
          path to match up with environment variables that are usable
          outside of Cygwin.

Tue Jul  9 07:46:57 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/TemplateParser.pm:

          Fix up the relative value matching code to work correctly
          on Windows.

Tue Jul  9 07:31:48 2002  Chad Elliott  <elliott_c@ociweb.com>

        * ace/ace.mpc:
        * ace/QoS/qos.mpc:
        * ace/RMCast/rmcast.mpc:
        * ace/SSL/ssl.mpc:
        * apps/gperf/src/gperf.mpc:
        * tests/tests.mpc:
        * tests/RMCast/tests.mpc:
        * tests/SSL/tests.mpc:

          Input files for the Make Project Creator for just the basic
          libraries, exe's and tests.

Tue Jul  9 07:24:06 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/mpc.pl:
        * bin/mwc.pl:

          The starting point for creating workspaces and projects.

        * bin/MakeProjectCreator/README:
        * bin/MakeProjectCreator/USAGE:

          A bit of lite documentation on the Make Project Creator.

        * bin/MakeProjectCreator/config/aceexe.mpb:
        * bin/MakeProjectCreator/config/acelib.mpb:
        * bin/MakeProjectCreator/config/aceversion.mpb:
        * bin/MakeProjectCreator/config/avstreamsexe.mpb:
        * bin/MakeProjectCreator/config/client.mpb:
        * bin/MakeProjectCreator/config/global.mpb: