@@ -1,3 +1,9 @@
+Tue Jul  9 16:24:46 2002  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* ace/Containers_T.cpp: Fixed inconsistent initializer order for
+	  ACE_Fixed_Stack and ACE_Bounded_Stack.  Thanks to Michael
+ 	  Searles <msearles@base16.com> for reporting this.
+
 Tue Jul  9 11:10:38 2002  Steve Huston  <shuston@riverace.com>
 
         * apps/Gateway/Peer/Peer.{h cpp}: Renamed Peer_Acceptor::open()
